# provenance-capture

./: README.md  example.py  pyproject.toml  subscriber.py
provenance/: capture.py
src/provenance/: amqp.py  capture.py
