[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provenance-capture"
version = "0.1.0"
description = "A short description of your project."
readme = "README.md"
authors = [{name = "Joe Futrelle", email = "jfutrelle@whoi.edu"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['provenance']

[tool.hatch.build.targets.wheel]
packages = ["src/provenance"]

[project.urls]
Repository = "https://github.com/WHOIGit/provenance-capture"
