[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provenance-capture"
version = "0.1.2"
description = "Simple provenance logging in JSONL"
readme = "README.md"
authors = [{name = "Joe Futrelle", email = "jfutrelle@whoi.edu"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['provenance']
dependencies = [
    'git+https://github.com/WHOIGit/amplify-amqp-utils.git'
]

[tool.hatch.build.targets.wheel]
packages = ["src/provenance"]

[project.urls]
Repository = "https://github.com/WHOIGit/provenance-capture"
